fixing bg on mobile

--- a/index.css
+++ b/index.css
@@ -796,11 +796,11 @@ section {
     font-size: 16px;
   }
 
-  /*body {
+  body {
        background-image: url("./otherLogoAndImg/mobilebg.jpg");
-    background-attachment: scroll;
-    background-repeat: repeat;
-  }*/
+    /* background-attachment: scroll;
+    background-repeat: repeat; */
+  }
 
   div.section {
     width: 97.5%;
